[metadata]
name = pyhomelab
version = 0.0.1
author = konri
author_email = konri@ricebucket.dev
url = https://github.com/initialgyw/pyhomelab
description = Common Python Functions for my homelab
long_description = file: README.md
long_description_content_type = text/markdown
keywords = homelab, setuptools
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    oci_cli
